all methods and routes  asked for collection points done
