# src/models/RecycleType.js
@@ -1,21 +1,0 @@
-const { DataTypes } = require('sequelize');
-const connection = require('../database/connection');
-
-const RecycleType = connection.define('recycle_types', {
-  name: {
-    type: DataTypes.STRING(180),
-    allowNull: false
-  },
-  createdAt: {
-    type: DataTypes.DATE,
-    allowNull: false,
-    defaultValue: DataTypes.NOW
-  },
-  updatedAt: {
-    type: DataTypes.DATE,
-    allowNull: false,
-    defaultValue: DataTypes.NOW
-  }
-});
-
-module.exports = RecycleType;
